@@ -18,7 +18,8 @@ Blurb ideas
 * TODO Autotest uses file:line instead of --scenario (current impl doesn't work on Windows)
 
 === New features
-* TODO: Run cucumber --language LANG with no args to see keywords.
+* Run cucumber --language help to see all supported languages.
+* Run cucumber --language LANG help to see keywords for a given language.
 * TODO: "Background" section
 * TODO: --tags
 * Multiline arguments (tables and """ strings) are printed in the output
